styles.css
:root{
  font-size: 26px;
  --font: 'Roboto Slab', serif;
  --metacritic-green: #00ce7a;
  --metacritic-yellow:#ffbd3f;
  --metacritic-red:#ff6874;
  --dark-gray: rgba(28, 27, 27, 0.947);
  --light-gray:#dee1e2;
  --background-color:white;
  --black:black;
  --text-color:var(--black);
  --input-color:white;
  --toggle-edge:40vw;
}

.dark-mode{
  --background-color: var(--dark-gray);
  --text-color:rgba(255, 255, 255, 0.777);
  --input-color:var(--dark-gray)k
}

body{
  padding: 0;
  margin: 0;
  overflow: hidden;
  background-color: var(--background-color);
  color: var(--text-color);
  font-family:var(--font);
}
.info{
  display: flex;
  flex-direction: column;
  align-items: center;
  color: var(--text-color);
  background-color: var(--background-color);
  height: 100vh;
}


.header{
  font-size: clamp(.2rem,1.7rem,2rem);
  margin-top: 0;
  top:0%;
  left: 0%;
  margin-left: 3px;
}

.banner{
  display: flex;
  flex-direction: row;
  background-color: black;
  position: static;
  width: 100%;
  padding: 0;
  margin: 0;
  border-radius: 3px;
  max-height: 2.2rem;
}

.logo{
  position: relative;
  top:0rem;
  max-width:2rem;
}


.player-score,
.toggle-container{
  position: relative;
  top: .5%;
  margin: 0;
  padding: 0;
}

.player-score{
  top: -4vh;
  /* bottom: 15rem; */
  right: 50vw;
  color: var(--text-color);
  margin-left: 2vw;
}
.toggle-container{
  /* left: 48vw; */
}


.icon{
  left: 50vw;
  margin-right: 2vw;
  position: relative;
  cursor: pointer;
}



.toggle {
  --width: 1.5rem;
  --height: calc(var(--width) / 2);
  --border-radius: calc(var(--height) / 2);

  display: inline-block;
  cursor: pointer;
}

.toggle__input {
  display: none;
}

.toggle__fill {
  position: relative;
  width: var(--width);
  height: var(--height);
  border-radius: var(--border-radius);
  background: #dddddd;
  transition: background 0.2s;
}

.toggle__input:checked ~ .toggle__fill {
  background: rgb(69, 68, 68);
}

.toggle__fill::after {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  height: var(--height);
  width: var(--height);
  background: #ffffff;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
  border-radius: var(--border-radius);
  transition: transform 0.2s;
}

.toggle__input:checked ~ .toggle__fill::after {
  transform: translateX(var(--height));
}

.toggle-container{
  display: flex;
  flex-direction: column;
}

.score{
  font-family: ProximaNova,sans-serif;
    text-align: center;
    opacity: 0;
    background-color: var(--metacritic-green);
    border-radius: 6px;
    height: 3.5rem;
    width: 3.5rem; 
    font-size: 2.25rem;
    font-weight: bolder;
    line-height: 3.5rem;
    margin-bottom: 1rem;
    position: relative;
    top: .3rem; 
    transition: opacity .5s;

}

.score-indicator{
  position: relative;
  left: .5vw;
  top: 3vh;
  opacity: 0;
  transition: opacity  .5s;
  color: black;
  font-weight: bolder;
}

.grad1 {
  background-color: #D9AFD9;
  background-image: linear-gradient(0deg, #D9AFD9 0%, #97D9E1 100%);

}

.grad2{
  background: -webkit-linear-gradient(0deg, #D9AFD9 0%, #97D9E1 100%);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}
.modal {
  border-radius: 30px;  
}

.modal::backdrop{
  background:black ;
  opacity: .8;
}

.menu-btn{
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
  width: 2rem;
  height: 2rem;
  cursor: pointer;
  transition: all .5 ease-in-out;
}

.menu-btn-burger{
  width: 1rem;
  height: .1rem;
  background-color: white;
  border-radius: 5px;
}

.menu-btn-burger::before,
.menu-btn-burger::after{
  content: '';
  position: absolute;
  width: 1rem;
  height: .1rem;
  background-color: white;
  border-radius: 5px;
  transition: all .5s ease-in-out;


}


/* burger animations */

.menu-btn-burger::before{
  transform: translateY(-9px);
}

.menu-btn-burger::after{
  transform: translateY(9px);
}

.menu-btn.open .menu-btn-burger {
  transform: translateX(-50px);
  background: transparent;
  box-shadow: none;
}

.menu-btn.open .menu-btn-burger::before{
  transform:  rotate(45deg) translate(35px,-35px);
}

.menu-btn.open .menu-btn-burger::after{
  transform:  rotate(-45deg) translate(35px,35px);
}


.form-container{
  position: relative;
  top: 4rem;
  left: 2rem;

}

.guess{
  position: relative;
  right: 1rem;
  min-height:1rem;
  min-width: 5rem;
  max-width: 8rem;
  font-size: .8rem;
  border-radius: 6px;
  border-color: var(--light-gray);
  line-height: 1.5;
  padding: 5px 10px;
  transition: box-shadow 100ms ease-in, border 100ms ease-in;
  /* border: 10px solid --var(--light-gray); */
  color: var(--text-color);
  background: --var(--light-gray);
    background-color: var(--input-color);
}

.guess:focus{
    background-color: var(--input-color);
}

.guess:hover {
    border-color: #ccc;
    background-color: var(--input-color);
}

.round{
  position: relative;
  /* right: 1rem; */
  top: 2rem;
  color: var(--text-color);
}

.title-score{
  display: flex;
  flex-direction: row;
  display: relative;
}

footer{
  position: absolute;
  height: 1.8rem;
  bottom: 0%;
  background-color: #ffbd3f;
  width: 100vw;
}

#pic{
    animation: bounce 1s infinite;
    max-width: 10em;
    box-shadow: 10px 10px 10px #ffbd3f; 
    border-radius: 20px; 
    /* border: 4px solid black; */
}

.btn{
    position: relative;
    right: 1rem;
    cursor: pointer;
    font: inherit;
    font-size: .8rem;
    font-weight: bold;
    min-height: 1.4rem;
    border-radius: 10px;
    padding: 10px;
    color: var(--text-color);
    background-color: var(--input-color);
    border: 2px solid var(--text-color);
}

.dark-mode-btn{
  background-color:darkgrey;
  border-color:black;
  color: black;
}

.button{
  display: inline-block;
  cursor: pointer;
  border-radius: 8px;
  padding: 14px 24px 16px;
  line-height: 1; 
  transition: transform 200ms,background 200ms;
}

.button:hover{
  transform: translateY(-2px);
}

#play-again-btn{
  position: static;
  border: 2px solid  #ffbd3f
}

.modal-container{
  display: flex;
  flex-direction: column;
}
@keyframes bounce {
  0%, 100% {
    transform: translateY(-3%);
    animation-timing-function: cubic-bezier(0.8, 0, 1, 1);
  }
  50% {
    transform: translateY(0);
    animation-timing-function: cubic-bezier(0, 0, 0.2, 1);
  }
}

